update jenkinsfile